#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

RH-2011-11-08-5: Enhancem.    - classic spooling cleanup
                              - more code cleanup (Part 2)

RH-2011-11-08-5: Enhancem.    - code cleanup (Part 1)

RH-2011-11-08-4: Bugfix:      - new URL for XML Schema (Part 2)

RH-2011-11-08-3: Bugfix:      - new URL for XML Schema

RH-2011-11-08-2: Enhancem.    - more arch string changes
                               o "linux" for lx24, 26, 30 kernels
                               o "aix" for aix 5.1 and up
                               o changes for ARM Linux support
                                 (preliminary support for arm64)

RH-2011-11-08-1: Enhancem.    - aimk
                               o stackprotect 
                               o proper freetype include
                               o changes for hwloc
                               o changes for ARM Linux
                               o arch string rework (lx -> linux, amd64 -> x64)

RH-2011-11-08-0: Enhancem.    - deleted  gmake 3.78.1
                              - imported gmake 3.82

RH-2011-04-16-0: Enhancem.    aimk -werror

RC-2011-04-16-0: Cleanup:     minor cleanup

RC-2011-04-12-0: Cleanup:     removed get_processor_id()

RH-2011-04-11-0: Cleanup:     cleanup

RH-2011-04-06-0: Enhancem.    Fedora 14 compilation fix

RC-2011-04-05-0: Cleanup:     more cleanups

RH-2011-04-03-0: Enhancem.    lock cleanup         

-------------------------------------------------------------------------------

RH-2011-04-01-0: CVS:         OGS 6.2u5p2

RC-2011-03-27-0: Cleanup:     more cleanups
